* Mon Sep 14 2020 Michal Biesek <michal.biesek@intel.com> v1.10.1
- Fixed calculation size for pmem kind
- Added support for MEMKIND_HOG_MEMORY in pmem kind
- Fixed memkind_defrag_reallocate
- Extended configure mechanism by MIN_LG_ALIGN parameter and disable-heap-manager option
- Optimized searching command in mallctl, memkind_defrag_reallocate and memkind_detect_kind methods
- Removed punch-hole in destroy extent operation

* Mon Dec 16 2019 Michal Biesek <michal.biesek@intel.com> v1.10.0
- Provided another way to use Persistent Memory in memkind (MEMKIND_DAX_KMEM_* kinds)
- Added C++ allocator for static kinds (including MEMKIND_DAX_KMEM_* kinds)
- Provided an interface to get memkind allocation statistics
- Provided a method to reduce fragmentation - memkind_defrag_reallocate()
- Added support for background thread
- Updated internally used jemalloc to upstream version 5.2.1
- Extended hbw interface with hbw_malloc_usable_size()
- Simplified building process

* Wed Apr 3 2019 Michal Biesek <michal.biesek@intel.com> v1.9.0
- Provided a second function to create PMEM kind memkind_create_pmem_with_config()
- Provided the memkind_detect_kind() function to recognize a kind from memory allocation
- Provided memkind_config_set_memory_usage_policy() function
  that modifies the default memory usage policy behavior
- Provided the ability to pass a NULL kind to memkind_malloc_usable_size() and memkind_realloc()
- Unified the memkind_realloc() behavior for all kinds
- Added the support for the pool_msize() function to TBB
- Extended build arch to ppc64, ppc64le, s390x
- Removed disable-stats from used jemalloc
- Fixed compilation under the Clang and rpm build configuration
- Provided the support for Dockerfile

* Mon Dec 10 2018 Michal Biesek <michal.biesek@intel.com> v1.8.0
- Fixed error with realloc/free method with passing thread-specific cache flag
- Fixed error with memkind_create_pmem(), if other PMEM kind was destroyed before